--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <li><a href="enlaces-marcadores.html">Enlaces a marcadores</a></li>
         <li><a href="LISTAS.html">Listas</a></li>
         <li><a href="TABLAS.html">Tablas</a></li>
-        <li><a href="Formularios">Formularios</a></li>
-        <li><a href="Formularios 2">Formularios 2</a></li>
+        <li><a href="Formularios.html">Formularios</a></li>
+        <li><a href="Formularios 2.html">Formularios 2</a></li>
     </ul>
 </body>
 </html>
