Fix link to 'Parrafos' page in index.html
cambiar enlace de parrafo a parafo.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         <li><a href="ENLACES.html">Introduccion a HTML, intro a VScode, enlaces</a></li>
-        <li><a href="Parrafo.html">Parrafos</a></li>
+        <li><a href="parafo.html">Parrafos</a></li>
         <li><a href="Estilos.html">Etiqueta Style</a></li>
         <li><a href="enlaces-marcadores.html">Enlaces a marcadores</a></li>
         <li><a href="LISTAS.html">Listas</a></li>
