--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li><a href="ENLACES.html">Introduccion a HTML, intro a VScode, enlaces</a></li>
-        <li><a href="parafo.html">Parrafos</a></li>
-        <li><a href="Estilos.html">Etiqueta Style</a></li>
-        <li><a href="enlaces-marcadores.html">Enlaces a marcadores</a></li>
-        <li><a href="LISTAS.html">Listas</a></li>
-        <li><a href="TABLAS.html">Tablas</a></li>
-        <li><a href="Formularios.html">Formularios</a></li>
-        <li><a href="Formularios 2.html">Formularios 2</a></li>
-    </ul>
+    <h1>Enlaces/Hiperenlaces/Links</h1>
+    <a href="http://iesjuanbosco.es" target="_self">IES Juan Bosco</a>
+    <a href="pagina1.html">enlace a pagina del sitio</a>
+    <a href="archivos/archivo1.html">enlace a pagina en subcarpeta</a>
+    <p>
+        <a href="http://alcazardesanjuan.es">
+        <img src="molinos-alczar-1.jpg" 
+        width="200"
+        alt="molinos de alcazar de san juan">
+        </a>
+    </p>
 </body>
 </html>
