Update links and structure in index.html

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 </head>
 <body>
     <ul>
-        <li><a href="ENLACES.html">Introduccion a HTML, intro a VScode, enlaces</a></li>
-        <li><a href="parafo.html">Parrafos</a></li>
-        <li><a href="Estilos.html">Etiqueta Style</a></li>
-        <li><a href="enlaces-marcadores.html">Enlaces a marcadores</a></li>
-        <li><a href="LISTAS.html">Listas</a></li>
-        <li><a href="TABLAS.html">Tablas</a></li>
-        <li><a href="Formularios.html">Formularios</a></li>
-        <li><a href="Formularios 2.html">Formularios 2</a></li>
+    <li><a href="enlaces-marcadores.html">Enlaces / Hiperenlaces / Links</a></li>
+    <li><a href="estilos.html">Etiqueta Estilo</a></li>
+    <li><a href="parafo.html">Párrafos</a></li>
+    <li><a href="listas.html">Listas</a></li>
+    <li><a href="tablas.html">Tablas</a></li>
+    <li><a href="formulario.html">Formulario</a></li>
+    <li><a href="formulario2.html">Formulario 2</a></li>
+    <li><a href="primera.html">Primera</a></li>
     </ul>
 </body>
+
 </html>
