Fix HTML structure and update paragraph styles

--- a/parrafo.html
+++ b/parrafo.html
@@ -7,16 +7,20 @@
 </head>
 <body>
     <h1>Párrafos</h1>
-    <p style="background-color: aqua;">en un lugar <br>
-        de la mancha <br>
-        de cuyo nombre no quiero <br>
-        acordarme
-    </p>
-    <p>Ejemplo de javaSrcipt</p>
-    <pre>
-        for ( const i; i<10; i++) {
-            alert( "Dime un número")
-        }
-    </pre>
+  <p style="background-color: aquamarine;">
+    en un lugar<br>
+    de la mancha<br>
+    de cuyo nombre no quiero<br>
+    acordarme
+</p>
+
+<p>de javascript</p>
+
+<pre>
+for (const i; i < 10; i++) {
+    alert("Dime un número")
+}
+</pre>
 </body>
+
 </html>
