Fix HTML formatting and indentation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
     <li><a href="enlaces-marcadores.html">Enlaces / Hiperenlaces / Links</a></li>
     <li><a href="estilos.html">Etiqueta Estilo</a></li>
-    <li><a href="parafo.html">Párrafos</a></li>
+    <li><a href="parafo.html">Parrafos</a></li>
     <li><a href="listas.html">Listas</a></li>
     <li><a href="tablas.html">Tablas</a></li>
     <li><a href="formulario.html">Formulario</a></li>
@@ -19,3 +19,4 @@
 </body>
 
 </html>
+
